Update top.css with dark mode background gradient and fixed aside position

--- a/public/css/top.css
+++ b/public/css/top.css
@@ -1,6 +1,6 @@
 :root {
   --main-bg-light: #f4f4f4;
-  --main-bg-dark: #333;
+  --main-bg-dark: linear-gradient(45deg,#0c0b0c,#200010);
   --text-color-light: #333;
   --text-color-dark: #fff;
   --accent-color-light: #9746c9;
@@ -37,6 +37,7 @@ body {
 body.dark-mode {
   background: var(--main-bg-dark);
   color: var(--text-color-dark);
+  background-attachment:fixed;
 }
 
 /* Modal styles */
@@ -312,6 +313,9 @@ footer {
 aside {
   grid-area: aside;
   border-radius: 30px;
+  top:50%;
+  z-index: 1;
+  transform: translate(0,-50%);
 }
 nav {
   grid-area: nav;
@@ -336,7 +340,6 @@ footer {
   background: #fff;
   color: var(--main-bg-dark);
   position: fixed;
-  top: 0;
   z-index: 1;
 }
 
